--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -453,7 +453,7 @@
         </div>
     </div>
 </section>
-<section class="col-12 border">
+<section class="col-12 border hide">
     <div class="row-1 bg-light">
         <div class="col-3 text-middle pad-horizontal">
             <h1>Google</h1>
@@ -554,4 +554,10 @@
 
         </div>
     </div>
+</section>
+<section class="row-12">
+    <div class="col-1 bg-primary drawer-left">
+        
+    </div>
+    <div class="col-11 bg-light"></div>
 </section>
