Grid cleanup; (WIP) cols-rows and rows-cols (add mqs); Added settings for %drawer-* components;

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -237,7 +237,7 @@
         </div>
     </div>
 </section>
-<section class="col-12 hide">
+<section class="col-12">
     <div class="row-12 cols-4 rows-6 cols-border hide">
         <div class="border-dark text-middle pad-large hover-bg-dark hover-mode-light hide" ng-repeat="n in component.range(8)">
             <div>
@@ -256,8 +256,8 @@
         </div>
     </div>
 
-    <div class="row-12 hide">
-        <div class="foo bg-dark drawer-left-1 transition">
+    <div class="row-12">
+        <div class="foo bg-dark drawer-left transition">
             <nav class="light">
                 <ul>
                     <li><a href=""><i class="fa fa-anchor "></i><span class="">Item 1</span></a></li>
@@ -556,8 +556,6 @@
     </div>
 </section>
 <section class="row-12">
-    <div class="col-1 bg-primary drawer-left">
-        
-    </div>
-    <div class="col-11 bg-light"></div>
+    <div class="col-6 row-3-small bg-primary"></div>
+    <div class="col-6 row-9-small bg-secondary"></div>
 </section>
