--- a/scss/modules/layers/_module.scss
+++ b/scss/modules/layers/_module.scss
@@ -28,6 +28,10 @@ $card-radius: 2px !default;
 // Drawer Settings
 $drawer-style: default !default;
 $drawer-theme: default !default;
+$drawer-mqs: (small, medium, all) !default;
+$drawer-positions: (left, right, top, bottom) !default;
+$drawer-static-width: 20rem !default;
+$drawer-static-height: 20rem !default;
 $drawer-full-width: column-width(10) !default;
 $drawer-full-height: row-height(10) !default;
 $drawer-half-width: column-width(1/2) !default;
