--- a/scss/modules/layers/_components.scss
+++ b/scss/modules/layers/_components.scss
@@ -75,7 +75,7 @@
     }
 }
 
-@each $mq in (small, medium, all) {
+@each $mq in $drawer-mqs {
     $suffix: if($mq == 'all', '', '-#{$mq}');
 
     @include mq($mq) {        
@@ -115,17 +115,21 @@
 
 @each $drawer-position in (left, right) {
     %drawer-#{$drawer-position} {
-        @include drawer($width: auto, $position: $drawer-position, $extend: false);
+        @include drawer($width: $drawer-static-width, $position: $drawer-position, $push: true, $extend: false);
 
         &-small { @include drawer($width: $drawer-small-width, $position: $drawer-position, $push: true, $mq: small, $extend: false); }
+
+        &-medium { @include drawer($width: $drawer-medium-width, $position: $drawer-position, $push: true, $mq: medium, $extend: false); }
     }
 }
 
 @each $drawer-position in (top, bottom) {
     %drawer-#{$drawer-position} {
-        @include drawer($height: auto, $position: $drawer-position, $extend: false);
+        @include drawer($height: $drawer-static-height, $position: $drawer-position, $push: true, $extend: false);
 
         &-small { @include drawer($height: $drawer-small-height, $position: $drawer-position, $push: true, $mq: small, $extend: false); }
+
+        &-medium { @include drawer($height: $drawer-medium-height, $position: $drawer-position, $push: true, $mq: medium, $extend: false); }
     }
 }
 
