--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -116,7 +116,7 @@ $form-affixable-selectors: "button, .button, input[type=submit], input[type=text
 $form-margin-right: $x/2 !default;
 $form-padding-vertical: $x-rem/2 !default;
 $form-padding-horizontal: $x-rem/2 !default;
-$form-radius: 3px !default;
+// $form-radius: 3px !default;
 $form-use-radius: false !default;
 $form-outline-color: lightblue !default;
 
@@ -233,7 +233,7 @@ $tabs-li-margin: 0 $x-rem 0 0 !default;
 $tabs-a-padding: $x-rem !default;
 // $tabs-border-width: $form-border-width !default;
 // $tabs-border-color: $color-gray !default;
-$tabs-radius: $form-radius !default;
+// $tabs-radius: $form-radius !default;
 $tabs-use-radius: $form-use-radius !default;
 
 // Dropdown Settings
@@ -275,7 +275,7 @@ $alert-padding: $x !default;
 $alert-border: 1px solid !default;
 // $alert-color-light: white !default;
 $alert-margin-bottom: $x !default;
-$alert-radius: $form-radius !default;
+// $alert-radius: $form-radius !default;
 $alert-use-radius: true !default;
 // $alert-type-scale: -1 !default;
 
