Starting Google News Redesign Study; Added %button-full-[height, width] (and border-radius removal for these); Fixed border components; Added (WIP) %text-spread;

--- a/scss/modules/buttons/_classes.scss
+++ b/scss/modules/buttons/_classes.scss
@@ -48,7 +48,12 @@ button, .button, input[type="button"], input[type="submit"] {
 
     // Display Button Classes
     &.block { @extend %button-block; }
-    &.full { @extend %button-full; }
+    &.full {
+        @extend %button-full;
+
+        &-width { @extend %button-full-width; }
+        &-height { @extend %button-full-height; }
+    }
 
     // Button State Classes
     &:disabled { @extend %button-disabled; }
