--- a/scss/modules/type/_classes.scss
+++ b/scss/modules/type/_classes.scss
@@ -129,6 +129,7 @@ a {
 .text-left { @extend %text-left; }
 .text-center { @extend %text-center; }
 .text-justify { @extend %text-justify; }
+.text-spread { @extend %text-spread; }
 
 .text-middle { @extend %text-middle; }
 .text-bottom { @extend %text-bottom; }
