--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -88,7 +88,17 @@
     margin: 0;
     width: 100%;
     height: 100%;
-    // TODO: vertical alignment middle
+    border-radius: 0;
+
+    &-height {
+        @extend %button-full;
+        width: initial;
+    }
+
+    &-width {
+        @extend %button-full;
+        height: initial;
+    }
 }
 
 %button-disabled {
