Starting Notifications Module

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -35,7 +35,8 @@
     'modules/fields/_module',
     'modules/tables/_module',
     'modules/states/_module',
-    'modules/panels/_module';
+    'modules/panels/_module',
+    'modules/notifications/_module';
     /* 'modules/_tabs'; */
     /* 'modules/_dropdowns'; */
     /* 'modules/_alerts'; */
